[gd_scene load_steps=3 format=3 uid="uid://ufdlqljm3bfo"]

[ext_resource type="Texture2D" uid="uid://dq25jpnf5whh3" path="res://Assets/Cute_Fantasy_Free/icon.svg" id="1_e24u0"]
[ext_resource type="Script" uid="uid://cirw46kjwcv4n" path="res://Scripts/UI/SkillsMenu.gd" id="1_xq74t"]

[node name="SkillsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xq74t")

[node name="SkillsTabContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentVBox" type="VBoxContainer" parent="SkillsTabContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SkillsTabContainer/ContentVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "HABILIDADES"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SkillsTabContainer/ContentVBox"]
layout_mode = 2

[node name="MainContainer" type="PanelContainer" parent="SkillsTabContainer/ContentVBox"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2
size_flags_vertical = 3

[node name="Tabs" type="TabContainer" parent="SkillsTabContainer/ContentVBox/MainContainer"]
layout_mode = 2
current_tab = 0

[node name="Scripts" type="Control" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MainSkillsContainer" type="HBoxContainer" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs/Scripts"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 50

[node name="AttackPulseSkillButton" type="TextureButton" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs/Scripts/MainSkillsContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("1_e24u0")

[node name="AttackLoopSkillButton" type="TextureButton" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs/Scripts/MainSkillsContainer"]
layout_mode = 2
texture_normal = ExtResource("1_e24u0")

[node name="Cybersecurity" type="Control" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MainSkillsContainer" type="HBoxContainer" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs/Cybersecurity"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 50

[node name="AttackPulseSkillButton" type="TextureButton" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs/Cybersecurity/MainSkillsContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("1_e24u0")

[node name="AttackLoopSkillButton" type="TextureButton" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs/Cybersecurity/MainSkillsContainer"]
layout_mode = 2
texture_normal = ExtResource("1_e24u0")

[node name="Database" type="Control" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MainSkillsContainer" type="HBoxContainer" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs/Database"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 50

[node name="AttackPulseSkillButton" type="TextureButton" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs/Database/MainSkillsContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("1_e24u0")

[node name="AttackLoopSkillButton" type="TextureButton" parent="SkillsTabContainer/ContentVBox/MainContainer/Tabs/Database/MainSkillsContainer"]
layout_mode = 2
texture_normal = ExtResource("1_e24u0")
